# anteroom

./: .gitignore  .mcp.json  404.html  CLAUDE.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  codecov.yml  index.html  mkdocs.yml  package-lock.json  pyproject.toml  sitemap.xml
.claude/commands/: address-review.md  cleanup.md  code-review.md  commit.md  deploy.md  dev-help.md  new-issue.md  next.md  plan-work.md  pr-check.md  senior-review.md  start-work.md  submit-pr.md  triage.md
.claude/rules/: feature-parity.md  product-vision.md  readme-maintenance.md  security-docs.md  ux-testing.md
.github/workflows/: publish-pypi.yml  publish.yml  test.yml
advanced/architecture/: index.html
advanced/changelog/: index.html
advanced/contributing/: index.html
advanced/developer-workflow/: index.html
advanced/testing/: index.html
api/: index.html
api/config/: index.html
api/conversations/: index.html
api/messages/: index.html
api/projects/: index.html
api/usage/: index.html
cli/: index.html
cli/commands/: index.html
cli/context-management/: index.html
cli/file-references/: index.html
cli/project-instructions/: index.html
cli/skills/: index.html
cli/tools/: index.html
configuration/: index.html
configuration/config-file/: index.html
configuration/environment-variables/: index.html
configuration/mcp-servers/: index.html
docs/: requirements.txt
docs/api/: index.md
packs/: index.html
scripts/: build-codemirror-vendor.mjs  package.json
search/: search_index.json
security/: index.html
spaces/: index.html
web-ui/: index.html
(+418 files in other folders)
